...
    <string name="catalog_filter">Выбрать фильтр</string>
    <string name="catalog_results">Найдено переводов: %1$d</string>
    <string name="catalog_empty">Библии ещё не установлены. Откройте каталог и загрузите нужный перевод. Чтение и сравнение работают только с текстами на устройстве.</string>
    <string name="catalog_add">Добавить Библию</string>
    <string name="catalog_install">Установить</string>
    <string name="catalog_read">Читать</string>
    <string name="catalog_details">Размер и отсутствующие главы</string>
    <string name="catalog_missing">Нет текста в источнике: %1$d глав.</string>
    <string name="catalog_both_testaments">Ветхий и Новый Заветы</string>
    <string name="catalog_setup_hint">Установите Библии из каталога. Читать можно только загруженные тексты. Можно продолжить настройку и установить их позже.</string>
    <string name="group_slavic">Славянские</string>
    <string name="group_germanic">Германские</string>
    <string name="group_romance">Романские и латинский</string>
...
